// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blueprint tests > flowchart > LR flowchart 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "Stop",
      "label": "",
      "size": "s",
      "startNodeId": "Start",
    },
  ],
  "nodes": [],
}
`;

exports[`blueprint tests > flowchart > LR flowchart with parallel edges and self-loop 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -22,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "B",
      "label": "Request",
      "size": "s",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -22,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "Response",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 1,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "C",
      "label": "",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -57,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "Yes",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 31,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "E",
      "label": "No",
      "size": "s",
      "startNodeId": "C",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -62,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "D",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "F",
      "label": "",
      "size": "s",
      "startNodeId": "D",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": -40,
      "y": 175,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "B",
      "label": "Server",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 60,
      "y": 175,
    },
    {
      "align": "middle",
      "geo": "diamond",
      "h": 50,
      "id": "C",
      "label": "Decision",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 50,
      "x": 185,
      "y": 175,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "D",
      "label": "Process",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 260,
      "y": 91,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "E",
      "label": "Reject",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 260,
      "y": 211,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "F",
      "label": "Done",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 360,
      "y": -5,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with linkStyle color and dash 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -67,
      "color": "green",
      "dash": "solid",
      "endNodeId": "B",
      "label": "GET",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -22,
      "color": "blue",
      "dash": "dashed",
      "endNodeId": "B",
      "label": "POST",
      "size": "m",
      "startNodeId": "A",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -22,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "200",
      "size": "s",
      "startNodeId": "B",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -67,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "A",
      "label": "400",
      "size": "s",
      "startNodeId": "B",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "A",
      "label": "Client",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": -40,
      "y": -5,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "B",
      "label": "API",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 60,
      "y": -5,
    },
  ],
}
`;

exports[`blueprint tests > flowchart > flowchart with subgraphs 1`] = `
{
  "edges": [
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 89,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "a2",
      "label": "",
      "size": "s",
      "startNodeId": "a1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": -0,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "b2",
      "label": "",
      "size": "s",
      "startNodeId": "b1",
    },
    {
      "arrowheadEnd": "arrow",
      "arrowheadStart": undefined,
      "bend": 11,
      "color": undefined,
      "dash": "solid",
      "endNodeId": "c2",
      "label": "",
      "size": "s",
      "startNodeId": "c1",
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 254,
      "id": "one",
      "label": "one",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 125,
      "x": 343,
      "y": -4,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 159,
      "id": "two",
      "label": "two",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 263,
      "x": 210,
      "y": 46,
    },
    {
      "align": "middle",
      "color": "black",
      "dash": "draw",
      "fill": "semi",
      "geo": "rectangle",
      "h": 254,
      "id": "three",
      "label": "three",
      "parentId": undefined,
      "size": "s",
      "verticalAlign": "start",
      "w": 138,
      "x": 10,
      "y": -4,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "c1",
      "label": "c1",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 35,
      "y": 45,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "a2",
      "label": "a2",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 355,
      "y": 165,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "a1",
      "label": "a1",
      "parentId": "one",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 355,
      "y": 45,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "b1",
      "label": "b1",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 226,
      "y": 108,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "b2",
      "label": "b2",
      "parentId": "two",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 357,
      "y": 108,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 50,
      "id": "c2",
      "label": "c2",
      "parentId": "three",
      "size": "m",
      "verticalAlign": "middle",
      "w": 100,
      "x": 23,
      "y": 165,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with loop, opt, and self-message 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.2,
      "anchorStartY": 0.2,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "enqueue(job)",
      "size": "s",
      "startNodeId": "lifeline-P",
    },
    {
      "anchorEndY": 0.4,
      "anchorStartY": 0.4,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-Q",
      "isExact": true,
      "isPrecise": true,
      "label": "dequeue()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
    {
      "anchorEndY": 0.6,
      "anchorStartY": 0.6,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "job?",
      "size": "s",
      "startNodeId": "lifeline-Q",
    },
    {
      "anchorEndY": 0.84,
      "anchorStartY": 0.76,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -80,
      "dash": "solid",
      "endNodeId": "lifeline-W",
      "isExact": true,
      "isPrecise": true,
      "label": "execute()",
      "size": "s",
      "startNodeId": "lifeline-W",
    },
  ],
  "groups": [
    [
      "actor-top-P",
      "lifeline-P",
      "actor-bottom-P",
    ],
    [
      "actor-top-Q",
      "lifeline-Q",
      "actor-bottom-Q",
    ],
    [
      "actor-top-W",
      "lifeline-W",
      "actor-bottom-W",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-P",
      "x": -375,
      "y": -165,
    },
    {
      "endY": 390,
      "id": "lifeline-Q",
      "x": -75,
      "y": -165,
    },
    {
      "endY": 390,
      "id": "lifeline-W",
      "x": 225,
      "y": -165,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -465,
      "y": -240,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-P",
      "label": "Producer",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -465,
      "y": 225,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -165,
      "y": -240,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Q",
      "label": "Queue",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -165,
      "y": 225,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 135,
      "y": -240,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-W",
      "label": "Worker",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": 135,
      "y": 225,
    },
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 153,
      "id": "fragment-0",
      "label": "loop [poll]",
      "size": "s",
      "verticalAlign": "start",
      "w": 540,
      "x": -195,
      "y": -59,
    },
    {
      "align": "start",
      "color": "light-blue",
      "dash": "dashed",
      "fill": "none",
      "geo": "rectangle",
      "h": 75,
      "id": "fragment-1",
      "label": "opt [job received]",
      "size": "s",
      "verticalAlign": "start",
      "w": 240,
      "x": 105,
      "y": 97,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > sequence diagram with notes 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.17,
      "anchorStartY": 0.17,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.83,
      "anchorStartY": 0.83,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Hi!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 390,
      "id": "lifeline-Alice",
      "x": -225,
      "y": -165,
    },
    {
      "endY": 390,
      "id": "lifeline-John",
      "x": 75,
      "y": -165,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -315,
      "y": -240,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -315,
      "y": 225,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -15,
      "y": -240,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 75,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 180,
      "x": -15,
      "y": 225,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 56,
      "id": "note-1",
      "label": "Alice thinks",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -220,
      "y": -63,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 56,
      "id": "note-2",
      "label": "John ponders",
      "size": "s",
      "verticalAlign": "middle",
      "w": 172,
      "x": -102,
      "y": 2,
    },
    {
      "align": "middle",
      "color": "yellow",
      "dash": "draw",
      "fill": "solid",
      "geo": "rectangle",
      "h": 56,
      "id": "note-3",
      "label": "Both see this",
      "size": "s",
      "verticalAlign": "middle",
      "w": 305,
      "x": -227,
      "y": 67,
    },
  ],
}
`;

exports[`blueprint tests > sequence diagram > simple sequence diagram 1`] = `
{
  "edges": [
    {
      "anchorEndY": 0.25,
      "anchorStartY": 0.25,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "Hello John, how are you?",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
    {
      "anchorEndY": 0.5,
      "anchorStartY": 0.5,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "dotted",
      "endNodeId": "lifeline-Alice",
      "isExact": true,
      "isPrecise": true,
      "label": "Great!",
      "size": "s",
      "startNodeId": "lifeline-John",
    },
    {
      "anchorEndY": 0.75,
      "anchorStartY": 0.75,
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": 0,
      "dash": "solid",
      "endNodeId": "lifeline-John",
      "isExact": true,
      "isPrecise": true,
      "label": "See you later!",
      "size": "s",
      "startNodeId": "lifeline-Alice",
    },
  ],
  "groups": [
    [
      "actor-top-Alice",
      "lifeline-Alice",
      "actor-bottom-Alice",
    ],
    [
      "actor-top-John",
      "lifeline-John",
      "actor-bottom-John",
    ],
  ],
  "lines": [
    {
      "endY": 300,
      "id": "lifeline-Alice",
      "x": -150,
      "y": -150,
    },
    {
      "endY": 300,
      "id": "lifeline-John",
      "x": 150,
      "y": -150,
    },
  ],
  "nodes": [
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 70,
      "id": "actor-top-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 200,
      "x": -250,
      "y": -220,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 70,
      "id": "actor-bottom-Alice",
      "label": "Alice",
      "size": "s",
      "verticalAlign": "middle",
      "w": 200,
      "x": -250,
      "y": 150,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 70,
      "id": "actor-top-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 200,
      "x": 50,
      "y": -220,
    },
    {
      "align": "middle",
      "geo": "rectangle",
      "h": 70,
      "id": "actor-bottom-John",
      "label": "John",
      "size": "s",
      "verticalAlign": "middle",
      "w": 200,
      "x": 50,
      "y": 150,
    },
  ],
}
`;

exports[`blueprint tests > state diagram > compound state diagram 1`] = `
{
  "edges": [
    {
      "bend": 0,
      "endNodeId": "fA",
      "label": undefined,
      "startNodeId": "First_start",
    },
    {
      "bend": 0,
      "endNodeId": "First_end",
      "label": undefined,
      "startNodeId": "fA",
    },
    {
      "bend": 0,
      "endNodeId": "sA",
      "label": undefined,
      "startNodeId": "Second_start",
    },
    {
      "bend": 0,
      "endNodeId": "Second_end",
      "label": undefined,
      "startNodeId": "sA",
    },
    {
      "bend": 0,
      "endNodeId": "First",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 0,
      "endNodeId": "Second",
      "label": "",
      "startNodeId": "root_start",
    },
  ],
  "nodes": [],
}
`;

exports[`blueprint tests > state diagram > simple state diagram 1`] = `
{
  "edges": [
    {
      "bend": 1,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "root_start",
    },
    {
      "bend": 24,
      "endNodeId": "Moving",
      "label": "",
      "startNodeId": "Still",
    },
    {
      "bend": 18,
      "endNodeId": "Still",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 1,
      "endNodeId": "Crash",
      "label": "",
      "startNodeId": "Moving",
    },
    {
      "bend": 1,
      "endNodeId": "root_end",
      "label": "",
      "startNodeId": "Crash",
    },
  ],
  "nodes": [
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 36,
      "id": "root_start",
      "parentId": undefined,
      "w": 36,
      "x": -8,
      "y": 2,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 8,
      "id": "Still",
      "label": "Still",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 20,
      "x": 0,
      "y": 136,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 8,
      "id": "Moving",
      "label": "Moving",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 20,
      "x": 0,
      "y": 256,
    },
    {
      "align": "middle",
      "color": "black",
      "geo": "rectangle",
      "h": 8,
      "id": "Crash",
      "label": "Crash",
      "parentId": undefined,
      "size": "m",
      "verticalAlign": "middle",
      "w": 20,
      "x": 0,
      "y": 376,
    },
    {
      "color": "black",
      "fill": "none",
      "geo": "ellipse",
      "h": 40,
      "id": "root_end",
      "parentId": undefined,
      "w": 40,
      "x": -10,
      "y": 480,
    },
    {
      "color": "black",
      "fill": "solid",
      "geo": "ellipse",
      "h": 24,
      "id": "root_end__inner",
      "parentId": undefined,
      "w": 24,
      "x": -2,
      "y": 488,
    },
  ],
}
`;
